Add support for study._direct_base_url
Include Study._direct_base_url to validation rules.

Require cdcagg_shared 0.6.0 or newer in setup.py.

Refer to cdcagg_shared feature-branch commit in requirements.txt.

Bump version to 0.4.0.

Write unreleased changelog entry 0.4.0.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ cerberus==1.3.4
 py12flogging==0.5.0
 
 # CDCAGG shared library
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.5.0#egg=cdcagg_common
+# TODO Change to version tag when released
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@19d7d712b0a6a8791dff2e74fbe5229a82c0de54#egg=cdcagg_common
 # Kuha Common
 git+https://bitbucket.org/tietoarkisto/kuha_common@2.0.1#egg=kuha_common
 # Kuha Document Store
