--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ cerberus==1.3.4
 py12flogging==0.5.0
 
 # CDCAGG shared library
-# TODO Change to version tag when released
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@19d7d712b0a6a8791dff2e74fbe5229a82c0de54#egg=cdcagg_common
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.6.0#egg=cdcagg_common
 # Kuha Common
 git+https://bitbucket.org/tietoarkisto/kuha_common@2.0.1#egg=kuha_common
 # Kuha Document Store
