--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ cerberus==1.3.4
 py12flogging==0.5.0
 
 # CDCAGG shared library
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.6.0#egg=cdcagg_common
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.7.0#egg=cdcagg_common
 # Kuha Common
-git+https://bitbucket.org/tietoarkisto/kuha_common@2.0.1#egg=kuha_common
+git+https://gitlab.tuni.fi/fsd/kuha_common@2.4.0#egg=kuha_common
 # Kuha Document Store
-git+https://bitbucket.org/tietoarkisto/kuha_document_store@1.1.0#egg=kuha_document_store
+git+https://gitlab.tuni.fi/fsd/kuha_document_store@1.3.0#egg=kuha_document_store
