--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 # Indirect
-ConfigArgParse==1.5.3
-python-dateutil==2.8.2
+ConfigArgParse==1.7
+python-dateutil==2.9.0
+dnspython==2.6.1
 
 # Direct
-tornado==6.2.0
-motor==2.5.1
-pymongo==3.12.0
-cerberus==1.3.4
-py12flogging==0.5.0
+tornado==6.4.1
+motor==3.5.1
+pymongo==4.8.0
+cerberus==1.3.5
+py12flogging==0.7.0
 
 # CDCAGG shared library
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.7.0#egg=cdcagg_common
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.8.1#egg=cdcagg_common
 # Kuha Common
-git+https://gitlab.tuni.fi/fsd/kuha_common@2.4.0#egg=kuha_common
+git+https://gitlab.tuni.fi/fsd/kuha_common@2.5.0#egg=kuha_common
 # Kuha Document Store
-git+https://gitlab.tuni.fi/fsd/kuha_document_store@1.3.0#egg=kuha_document_store
+git+https://gitlab.tuni.fi/fsd/kuha_document_store@1.4.0#egg=kuha_document_store
