--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,16 @@ python-dateutil==2.9.0
 dnspython==2.6.1
 
 # Direct
-tornado==6.4.1
+tornado==6.4.2
 motor==3.5.1
 pymongo==4.8.0
 cerberus==1.3.5
 py12flogging==0.7.0
 
 # CDCAGG shared library
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.8.1#egg=cdcagg_common
+# TODO Use version when released
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@48-support-more-ddi-c-elements#egg=cdcagg_common
 # Kuha Common
-git+https://gitlab.tuni.fi/fsd/kuha_common@2.5.0#egg=kuha_common
+git+https://gitlab.tuni.fi/fsd/kuha_common@2.6.0#egg=kuha_common
 # Kuha Document Store
-git+https://gitlab.tuni.fi/fsd/kuha_document_store@1.4.0#egg=kuha_document_store
+git+https://gitlab.tuni.fi/fsd/kuha_document_store@1.5.0#egg=kuha_document_store
