Today's date to 0.7.0 changelog entry & use shared-lib release tag

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,7 @@ cerberus==1.3.5
 py12flogging==0.7.0
 
 # CDCAGG shared library
-# TODO Use version when released
-git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@48-support-more-ddi-c-elements#egg=cdcagg_common
+git+https://github.com/cessda/cessda.cdc.aggregator.shared-library@0.9.0#egg=cdcagg_common
 # Kuha Common
 git+https://gitlab.tuni.fi/fsd/kuha_common@2.6.0#egg=kuha_common
 # Kuha Document Store
